--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ test = [
     "pytest",
     "pytest-asyncio",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
+env = ["FASTMCP_STATELESS_HTTP=True"]
