--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastmcp==2.12.1",
-    "pandas"
+    "fastmcp==2.14.3",
+    "pandas",
 ]
 
 [project.optional-dependencies]
